--- a/css/styles.css
+++ b/css/styles.css
@@ -125,12 +125,59 @@ main::before {
     height: 100px;
 }
 
-.construction {
+.about {
     color: white;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-    text-align: center;
-    font-size: 2em;
-    margin-top: 190px;
+    font-weight: 200;
+    font-size: 1.15em;
+    margin-top: 10px;
+    padding: 40px;
+    line-height: 1.5;
 }
 
+.ka {
+    width: 20%;
+    float: left;
+    margin: 50px 20px 10px 20px;
+    border-radius: 50%;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+}
+
+.converter {
+    width: 40%;
+    float: right;
+    margin: 120px 20px 10px 20px;
+}
+
+.software-title {
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 800;
+    font-size: 2em;
+    margin-top: 120px;
+    margin-left: 40px;
+}
+
+.software-description {
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 200;
+    font-size: 1.2em;
+    margin-top: -20px;
+    padding: 0 40px 40px 40px;
+    line-height: 1.5;
+}
+
+.git {
+    color: white;
+    text-decoration: none;
+}
+
+.git:hover {
+    color: grey;
+}
+
+.ciona {
+    font-style: italic;
+}
